2010-07-27  Araki Ken  <arakiken@users.sf.net>

	* x_window.c: XSetInputFocus() is called in ButtonPress event.

	* x_screen.c, x_display.c: --parent("parent_window") option is added.

	* gtk/Makefile, main.c, mlvte.[ch]: Added.

2010-06-29  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: fg and bg colors of bce character are changed
	  by "ESC[48;5;Xm" sequence. (Thanks to Anonymous bin ich)

	* ml_vt100_parser.c: 0x7f is ignored. (Thanks to Y.Amagai)
	  (see http://vt100.net/docs/vt100-ug/table3-10.html)

2010-06-22  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Fixed a bug which disabled transparency of mlterm
	  without image library like gdk-pixbuf.
	  (SF Bug #3014219, Thanks to Khaled Hosny)

2010-06-10  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: Fixed a bug which disabled delete key in win32.
	
	* ml_char.c: 'is_comb' flag check which destroys Lam Alef ligature
	  is excluded in ml_char_combine.
	  (SF Bug #3012762, Thanks to Khaled Hosny)
	
	* xwindow/version.h.in: 3.0.1 => 3.0.1 post

2010-06-07  Araki Ken  <arakiken@users.sf.net>

	* 3.0.1 released.
	  (tag "rel-3_0_1")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.0.1

	* configure: re-generated

2010-06-06  Araki Ken  <arakiken@users.sf.net>

	* x_win32.h: XK_Begin, XK_KP_Begin and IsKeypadKey macros are added
	  for win32.

	* etc/termcap: kh and @7 definitions are added to "xterm" and "*".

	* x_screen.c: Fixed a bug which disabled keyboard input in application
	  keypad mode.

2010-06-03  Araki Ken  <arakiken@users.sf.net>

	* x_font.c: Returned value of get_cs_info() is checked.

	* x_screen.c:
	  Modifier keys with Del/Home/End are distinguished.
	  The keypad middle key (XK_Begin, XK_KP_Begin) is mapped to ^[[E, ^[[1;5E etc.
	  (SF Bug #2818015, Thanks to Thomas Wolff)

	* x_screen.c: If Num_Lock is pressed, application keypad is ignored.
	
	* x_window.c: XK_Num_Lock is not ignored in XModifierKeymap by default.
