@@ -18,3 +18,6 @@ clean:
 
 distclean: clean
 	rm -f Makefile
+
+install:
+	install -c gmlterm /usr/local/bin
